# simple3d

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  vcpkg.json
.github/workflows/: build-and-release.yml
examples/: CMakeLists.txt  imgui.ini  interactive_model.cc  interactive_scene.cc
examples/interactive_model/: CMakeLists.txt  main.cc
examples/interactive_scene/: CMakeLists.txt  main.cc  main.cpp
include/Simple3D/: simple3d.h
include/simple3d/: simple3d.h  types.h
include/simple3d/context/: context.h  input.h  window.h
include/simple3d/graphics/: camera.h  drawable.h  graphics.h  light.h  model.h  model_handle.h  renderer.h  scene.h  shader.h  shader_storage.h  view.h
include/simple3d/graphics/internal/: element_array_buffer.h  element_buffer_object.h  gles_shader.h  misc.h  shader.h  vertex.h  vertex_array_object.h  vertex_buffer_object.h
include/simple3d/graphics/models/: cuboid.h  model.h  model_shader.h  primitive_renderer.h  primitives.h  sphere.h  textured_model_shader.h
include/simple3d/graphics/primitive/: primitive.h
include/simple3d/graphics/renderer/: scene_renderer.h
include/simple3d/imgui/: imgui.h
include/simple3d/misc/: error.h
include/simple3d/shader/: shader.h
include/simple3d/utils/: fps_camera.h
simple3d/: CMakeLists.txt  test.cpp  test.h
simple3d/cmake/: ci.cmake  utils.cmake
simple3d/core/: CMakeLists.txt  assert.cpp  assert.h  compiler.h  error-inl.h  error.cpp  error.h  error_code.h  format.h  public.h  shared_ptr-inl.h  shared_ptr.h  static_initializer.h  types.h
simple3d/core/graphics/: primitive.h
simple3d/core/unittests/: CMakeLists.txt  error_ut.cpp
simple3d/internal/: CMakeLists.txt
simple3d/internal/frontend/: CMakeLists.txt  program.cpp  test.cpp
simple3d/internal/frontend/graphics/: CMakeLists.txt  renderer.cpp  renderer.h
simple3d/internal/frontend/graphics/webgl/: CMakeLists.txt  element_buffer_object.cpp  gles_shader.h  shader_source.h.in  vertex_array_object.cpp  vertex_buffer_object.cpp  vertex_buffer_object.h
simple3d/internal/frontend/graphics/webgl/shader_sources/default/: vertex.glsl
simple3d/internal/frontend/graphics/webgl/shader_sources/textured/: fragment.glsl  vertex.glsl
simple3d/internal/frontend/graphics/webgl2/: element_buffer_object.h  gles_shader.cpp  misc.cpp  misc.h  vertex.cpp  vertex.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.h  webgl.cpp  webgl.h
simple3d/internal/frontend/templates/: index.html
simple3d/scripts/: merge_compile_commands.py
simple3d/web/: CMakeLists-web-client.cmake  CMakeLists-web-server.cmake  CMakeLists.txt
simple3d/web/client/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  config.h  program.cpp  public.h  render_data_fetcher.cpp  render_data_fetcher.h  renderer_agent.cpp  renderer_agent.h
simple3d/web/client/gl/: CMakeLists.txt  renderer.cpp  renderer.h
simple3d/web/client/graphics/: CMakeLists.txt  renderer.cpp  renderer.h
simple3d/web/client/lib/: CMakeLists.txt  helpers-inl.h  helpers.h  interop.cpp  interop.h  io.cpp  io.h
simple3d/web/client/lib/graphics/: CMakeLists.txt  camera.cpp  camera.h  config.h  fps_camera.cpp  fps_camera.h  helpers-inl.h  helpers.h  model_shader.cpp  model_shader.h  public.h
simple3d/web/client/lib/graphics/shader_sources/: CMakeLists.txt  shader_sources.cpp.in  shader_sources.h
simple3d/web/client/lib/graphics/shader_sources/default/: fragment.glsl  vertex.glsl
simple3d/web/client/lib/graphics/shader_sources/model/: fragment.glsl  vertex.glsl
simple3d/web/client/lib/graphics/shader_sources/textured/: fragment.glsl  vertex.glsl
simple3d/web/client/lib/webgl2/: CMakeLists.txt  ebo.cpp  ebo.h  element_buffer_object.cpp  element_buffer_object.h  gles_shader.cpp  gles_shader.h  helpers.cpp  helpers.h  misc.cpp  misc.h  public.h  shader.cpp  shader.h  shader_program-inl.h  shader_program.cpp  shader_program.h  shader_sources.h.in  uniform_id-inl.h  uniform_id.cpp  uniform_id.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertex.cpp  vertex.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object.h  webgl.cpp  webgl.h
simple3d/web/client/lib/webgl2/shader_sources/: CMakeLists.txt  shader_sources.cpp.in
simple3d/web/client/templates/: index.html
simple3d/web/server/: CMakeLists.txt  program.cpp  server-inl.h  server.cpp  server.h  test.cpp
src/: CMakeLists.txt  main.cpp  simple3d.cc
src/context/: context.cc  input.cc  window.cc
src/graphics/: camera.cc  model.cc  model_handle.cc  scene.cc  shader_storage.cc  view.cc
src/graphics/internal/: CMakeLists.txt  element_array_buffer.cc  element_buffer_object.cc  gles_shader.cc  misc.cc  shader.cc  shader_source.h.in  vertex.cc  vertex_array_object.cc  vertex_buffer_object.cc
src/graphics/internal/shader/: fragment.glsl
src/graphics/internal/shader_sources/: fragment.glsl  vertex.glsl
src/graphics/internal/shader_sources/textured/: fragment.glsl  vertex.glsl
src/graphics/models/: cuboid.cc  model.cc  model_shader.cc  primitive_renderer.cc  sphere.cc  textured_model_shader.cc
src/graphics/primitive/: primitive.cc
src/imgui/: CMakeLists.txt  imgui.cc
src/shader/: CMakeLists.txt  fragment.glsl  shader.cc  shader_source.h.in  vertex.glsl
src/utils/: fps_camera.cc
